<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.app.superanimal.LoginActivity">

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/title_activity_login"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txtSubtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/txtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/txtCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtApp"
        android:layout_marginTop="16dp"
        android:paddingLeft="5dp"
        android:text="@string/label_cpf"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtCPF"
        android:ems="10"
        android:inputType="number"
        android:maxLength="18"
        android:textColor="@color/preto"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cpf"
        android:paddingLeft="5dp"
        android:text="@string/label_senha"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtSenha"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textColor="@color/preto"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/senha"
        android:text="@string/entrar"
        android:textColor="@color/branco"
        android:textSize="16sp" />


</RelativeLayout>
